# elpc

./: .gitignore  CMakeLists.txt  README.md
cmake/: elpcConfig.cmake.in
include/elpc/: elpc.hpp
include/elpc/core/: loc.hpp  table.hpp  token.hpp  tokenReader.hpp
include/elpc/diagnostics/: diagnostic.hpp  diagnosticEngine.hpp
include/elpc/ir/: irBuilder.hpp  llvmBridge.hpp
include/elpc/lexer/: lexer.hpp  rule.hpp
include/elpc/parser/: parser.hpp  prattParser.hpp  sema.hpp
tests/: TestDiagnostics.cpp  TestHelpers.hpp  TestIR.cpp  TestLLVM.cpp  TestLexer.cpp  TestParser.cpp  TestPratt.cpp  TestSema.cpp  TestSymbolTable.cpp
